move to bootstrap-bundle, symfony 6.4

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,6 +1,3 @@
-@import "~mmenu-light/dist/mmenu-light.css";
-
-@import "~mmenu-light/demo/css/demo.css";
-@import "~mmenu-light/demo/css/site.css";
-
-/*@import "sidebar.css";*/
+body {
+    background-color: skyblue;
+}
