--- a/templates/booking/calendar.html.twig
+++ b/templates/booking/calendar.html.twig
@@ -1,5 +1,5 @@
 {# templates/booking/calendar.html.twig #}
-{% extends "@SurvosBootstrap/sneat/shell.html.twig" %}
+{% extends "base.html.twig" %}
 
 {% block body_content block('content') %}
 
