--- a/templates/booking/new.html.twig
+++ b/templates/booking/new.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}New Booking{% endblock %}
 
-{% block content %}
+{% block body %}
     <h1>Create new Booking</h1>
 
     {{ include('booking/_form.html.twig') }}
